<resources>
    <string name="app_name">GROW GOOD COTTON</string>
    <string name="action_settings">Settings</string>
    <string name="St_Pest">Management option</string>
    <string name="St_Pestun">To identify the pest and management</string>
    <string name="title_activity_android_localize">AndroidLocalize</string>
    <string name="greet">Welldone Sachin!!</string>
    <string name="langselection">Select the language in which you want to greet Sachin!!!!</string>
    <string name="chooselang">Choose the language</string>
    <string name="flower_damage">Flower /Square Damage</string>
    <string name="leaf_damage">Leaf Damage</string>
    <string name="stem_damage">Stem/branches Damage</string>
    <string name="boll_damage">Boll Damage</string>
    <string name="image_related">Help: Select an image to view more related images</string>
    <string name="image_related2">Help:Select an image to identify the pest</string>
    <string-array name="languages">
        <item>Select language</item>
        
        
        <item>English</item>
    </string-array>
    <string-array name="pestknown">
        <item>@drawable/aphid</item>
        <item>@drawable/american_bollworm</item>
        <item>@drawable/jassid</item>
        <item>@drawable/pink_bollworm</item>
        <item>@drawable/spotted_spiny_bollworm</item>
        <item>@drawable/thrips</item>
        <item>@drawable/leafworm_tobacco_caterpillar</item>
        <item>@drawable/whitefly</item>
    </string-array>
    <string-array name="flower_ids">
        <item>@drawable/f3bw1</item>
        <item>@drawable/f4bw2</item>
        <item>@drawable/f5bw3</item>
        <item>@drawable/f6bw4</item>
        <item>@drawable/f7bw5</item>
        <item>@drawable/f8bw6</item>
        <item>@drawable/f1ap3</item>
        <item>@drawable/f2ap4</item>
        <item>@drawable/f9pb1</item>
        <item>@drawable/f10pb3</item>
        <item>@drawable/f11pb7</item>
        <item>@drawable/f12ea2</item>
        <item>@drawable/f13ea3</item>
        <item>@drawable/f14sp8</item>
    </string-array>
    <string-array name="leaf_ids">
        <item>@drawable/l30bw11</item>
        <item>@drawable/l31bw12</item>
        <item>@drawable/l1ap1</item>
        <item>@drawable/l2ap5</item>
        <item>@drawable/l3ap6</item>
        <item>@drawable/l17ap8</item>
        <item>@drawable/l9ja1</item>
        <item>@drawable/l10ja2</item>
        <item>@drawable/l11ja3</item>
        <item>@drawable/l12ja4</item>
        <item>@drawable/l13ja5</item>
        <item>@drawable/l16ja6</item>
        <item>@drawable/l25ea5</item>
        <item>@drawable/l26th1</item>
        <item>@drawable/l27th2</item>
        <item>@drawable/l28th3</item>
        <item>@drawable/l29th4</item>
        <item>@drawable/l32th5</item>
        <item>@drawable/l33th6</item>
        <item>@drawable/l18sp1</item>
        <item>@drawable/l19sp2</item>
        <item>@drawable/l20sp3</item>
        <item>@drawable/l21sp4</item>
        <item>@drawable/l22sp5</item>
        <item>@drawable/l23sp6</item>
        <item>@drawable/l24sp7</item>
        <item>@drawable/l4wf1</item>
        <item>@drawable/l5wf2</item>
        <item>@drawable/l6wf3</item>
        <item>@drawable/l7wf4</item>
        <item>@drawable/l8wf5</item>
        <item>@drawable/l14wf6</item>
        <item>@drawable/l15wf7</item>
    </string-array>
    <string-array name="stem_ids">
        <item>@drawable/s1ap2</item>
        <item>@drawable/s4ap9</item>
        <item>@drawable/s6ea1</item>
    </string-array>
    <string-array name="boll_ids">
        <item>@drawable/b5bw7</item>
        <item>@drawable/b6bw8</item>
        <item>@drawable/b7bw9</item>
        <item>@drawable/b8bw10</item>
        <item>@drawable/b14ap7</item>
        <item>@drawable/b9pb2</item>
        <item>@drawable/b10pb4</item>
        <item>@drawable/b11pb5</item>
        <item>@drawable/b12pb6</item>
        <item>@drawable/b13pb8</item>
        <item>@drawable/b19pb9</item>
        <item>@drawable/b15ea4</item>
        <item>@drawable/b16ea6</item>
        <item>@drawable/b17ea7</item>
    </string-array>
    <string name="american_bolworm_beloweti">
    Less than 4 plants out of sample of 20 plants per acre having one or more  ‘flared up squares’ during 60-120 days after sowing in Non-Bt
</string>
    <string name="american_bolworm_aboveeti">
More than 4 plants out of sample of 20 plants per acre having one or more  ‘flared up squares’ during 60-120 days after sowing in Non-Bt
</string>
    <string name="jasside_beloweti">
Less than 5 plants out of sample of 20 plants per acre showing damage Grade II/ Grade III / Grade IV
</string>
    <string name="jasside_aboveeti">
More than 5 plants out of sample of 20 plants per acre showing damage Grade II/ Grade III / Grade IV
</string>
    <string name="whitefly_beloweti">
Less than 10 whiteflies per plant on 10 plants out of sample of 20 plants per acre
</string>
    <string name="whitefly_aboveeti">
more than 10 whiteflies per plant on 10 plants out of sample of 20 plants per acre
</string>
    <string name="aphids_beloweti">
One plant affected showing cuppling or crumpling of few leaves on upper portion of the plant out of sample of 20 plants per acre
</string>
    <string name="aphids_aboveeti">
More than one plant affected showing cuppling or crumpling of few leaves on upper portion of the plant out of sample of 20 plants per acre
</string>
    <string name="pinkbollworm_beloweti">
One live larva out of 20 infested flowers or bolls during 60-120 days after sowing.
</string>
    <string name="pinkbollworm_aboveeti">
More than one live larvae out of 20 infested flowers or bolls during 60-120 days after sowing.
</string>
    <string name="pinkbollworm_beloweti1">
Less than 8 adult moths per night per Pheromone trap during 60-120 days after sowing.
</string>
    <string name="pinkbollworm_aboveeti1">
More than 8 adult moths per night per Pheromone trap during 60-120 days after sowing.
</string>
    <string name="spiny_bollworm_beloweti">
Below 10% infestation on  shoots / squares / bolls
</string>
    <string name="spiny_bollworm_aboveeti">
Morethan 10% infestation on  shoots / squares / bolls
</string>
    <string name="leafworm_beloweti">
Less than one Egg mass or cluster of larvae out of sample of 20 plants per acre at early to peak vegetative stage.
</string>
    <string name="leafworm_aboveeti">
More than one Egg mass or cluster of larvae out of sample of 20 plants per acre at early to peak vegetative stage.
</string>
    <string name="leafworm_beloweti1">
Less than 5 full grown larvae on less than 10 plant out of sample of 20 plants per acre at early to peak vegetative stage.
   (OR)  One skeletonised leaves per plant on 10 plants out of sample of 20 plants per acre upto 60 days after sowing.
</string>
    <string name="leafworm_aboveeti1">
More than 4 full grown larvae on more than 9 plant out of sample of 20 plants per acre at early to peak vegetative stage.
       (OR)
More than one skeletonised leaves per plant on 10 plants out of sample of 20 plants per acre upto 60 days after sowing.
</string>
    <string name="thrips_beloweti">
Less than 5 plants out of sample of 20 plants per acre showing damage Grade II/ Grade III / Grade IV
</string>
    <string name="thrips_aboveeti">
More than 5 plants out of sample of 20 plants per acre showing  damage Grade II/ Grade III / Grade IV
</string>
    <string name="Insecticide">
      Insecticide &#x2009;&#x2009;\u0020&#x2009;&#x2009;\u0020&#x2009;&#x2009;\u0020
        </string>
    <string name="Formulation">
     Formulation\n(gm/ml)
        </string>
    <string name="active_ingredient">
     Active\ningredient\n(gm)
        </string>
    <string name="Dilution">
     Dilution\n(water\nin Ltr)
        </string>
    <string name="Waiting_peroid">
      Waiting\nPeriod\n(Days)
        </string>
    <string name="Brand_Name">
      Brand Name
        </string>
    <string name="Approximate">
      Approximate\nPrice(Rs)
        </string>
    <string-array name="jassid">
        <item>@drawable/l9ja1</item>
        <item>@drawable/l10ja2</item>
        <item>@drawable/l11ja3</item>
        <item>@drawable/l12ja4</item>
        <item>@drawable/l13ja5</item>
        <item>@drawable/l16ja6</item>
        
        
        
        
        
    </string-array>
    <string name="jassid1">
        Common Name: 	Jassids
        </string>
    <string name="jassid2">
       Scientific Name: Amrascadevastans (Dist.)
        </string>
    <string name="jassid3">
      Family:		Cicadellidae
        </string>
    <string name="jassid4">
      Order:		Hemiptera
        </string>
    <string name="jassid5">
    Pest Category: 	Sap feeder
        </string>
    <string name="jassid_idet1">
      Egg: Eggs are curved, elongated and yellowish white in colour, and deeply embedded in the midribs of large veins on the undersurface of the leaves.
        </string>
    <string name="jassid_idet2">
    Nymph: Nymphs are flattened, pale yellowish green with characteristic way of moving diagonally in relation to their body, seen on the lower surface of leaves during daytime.
        </string>
    <string name="jassid_idet3">
    Adult: Adults are about 3.5 mm in length. They are elongate and wedge shaped with pale green body. Adults are very active with sideway movements but quick to fly.
        </string>
    <string name="jassid_idet4">
    Pest attacks the crop during 1-50 days age and attack is severe during winter.
        </string>
    <string name="jassid_syd1">
  Both nymphs and adults suck the plant sap and introduce salivary toxins that impair photosynthesis in proportion to the amount of feeding.
        </string>
    <string name="jassid_syd2">
     1st and 2nd  instar nymphs feed near bases of the leaf veins, later instars get distributed all over the leaves but feed chiefly on the under surface of leaves.
        </string>
    <string name="jassid_syd3">
      The affected leaves curl downwards, turn yellowish, then brownish before drying and shedding.
        </string>
    <string name="jassid_syd4">
   Severe incidence lead to stunting of young plants and results in “hopper burn” injury.
        </string>
    <string name="jassid_Lh1">
     The female inserts about 15 eggs inside leaf veins. The incubation period ranges from 4-11 days. The nymphal period occupies 7-21 days depending upon weather conditions. Eleven generations have been estimated to occur in a year. Nymphs moult five times. Average number of eggs laid by female is about 15 with a maximum of 29.
        </string>
    <string name="jassid_Lh2">
      Jassids survive on a variety of wild hosts during dry season. Populations of the jassids occur throughout the year.
        </string>
    <string name="jassid_bc1">
     Inter-crop with cluster bean, cowpea or sorghum or soybean or black gram to encourage predators of sucking pests.
        </string>
    <string name="jassid_bc2">
    Release predator Chrysoperla zastrouviearabica or Coccinella septempunctata or Syrphus / Scymnus sp. Conserve spiders Distinaalbida and ants like Camponotus sp.
        </string>
    <string name="jassid_bc3" formatted="false">
     Neem oil 1.0% + Neem Seed Kernel Extract 5.0% + 0.05-0.1% detergent
        </string>
    <string name="jassid_bc4">
             Azadirachtin 0.03% (300 ppm) Neem Oil Based WSP Containing
        </string>
    <string name="jassid_bc5">
     Verticillium lecanii 10gms/lit of water, wherever good formulations are available from reliable manufacturers
        </string>
    <string name="jassid_bc6">
     Metarhizium anisopliae @ 50g (2 X 108 CFU/gm) or Verticillium lacanni @ 50 g (2X 108 CFU/gm) in 10 liters of water
        </string>
    <string name="jassid_Cmc1">
    Sow the resistant varieties early.
        </string>
    <string name="jassid_Cmc2">
    Do not use high doses of nitrogenous fertilizers.
        </string>
</resources>