<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:textAlignment="center"
        android:textSize="18dp"
        android:text="Cotton Pest Management"
        android:textColor="@color/blue"
        android:background="@drawable/green_button"
        />
    </RelativeLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/flower_imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/flower" />

                <TextView
                    android:id="@+id/desc1"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignLeft="@+id/flower_imageView1"
                    android:layout_alignRight="@+id/flower_imageView1"
                    android:layout_centerVertical="true"
                    android:text="@string/flower_damage"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="@color/white" />

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/leaf_imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/leaf" />
                <TextView
                    android:id="@+id/desc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/leaf_imageView2"
                    android:layout_alignRight="@+id/leaf_imageView2"
                    android:layout_centerVertical="true"
                    android:text="@string/leaf_damage"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="@color/white" />


            </RelativeLayout>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:weightSum="1"
            android:layout_weight="0.5">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/stem_imageView3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/stem" />
                <TextView
                    android:id="@+id/desc3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/stem_imageView3"
                    android:layout_alignRight="@+id/stem_imageView3"
                    android:layout_centerVertical="true"
                    android:text="@string/stem_damage"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="@color/white" />
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/boll_imageView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/boll" />
                <TextView
                    android:id="@+id/desc4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/boll_imageView4"
                    android:layout_alignRight="@+id/boll_imageView4"
                    android:layout_centerVertical="true"
                    android:text="@string/boll_damage"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:gravity="center"
                    android:textColor="@color/white" />
            </RelativeLayout>
        </TableRow>
        <TextView
            android:id="@+id/circletxtdetail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:text="Help: click on the relevant images where the pest seen to check the different symptoms of damage by different pest to identify the pest"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentBottom="true">
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="redefining cotton cultivation"
                android:background="@color/black"
                android:textAlignment="viewEnd"
                android:textColor="@color/brown"
                android:textSize="22dp"
                android:textStyle="italic"
                android:padding="10dp"/>
        </LinearLayout>

    </TableLayout>

</LinearLayout>
